--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div id="content">
-            <h1>Bem vindo ao meu site!</h1>
+            <h1>Bem vindo ao site de Sidney Sousa!</h1>
 
             <img src="img/eu.jpg" alt="Foto de Sidney Sousa">
 
